# brian2modelfitting

./: .coveragec  .gitignore  .travis.yml  LICENSE  README.md  fix_pr.py  fix_pr_v2.py  pyproject.toml  requirements.txt  rtd-requirements.txt  setup.py
.github/: static_analysis.yml
.github/workflows/: tests.yml
brian2modelfitting/: __init__.py  base.py  fitter.py  inferencer.py  metric.py  optimizer.py  sensitivity.py  simulation.py  simulator.py  utils.py  version.py
brian2modelfitting/modelfitting/: __init__.py  metric.py  modelfitting.py  modelfittingOOP.py  optimizer.py  simulation.py  utils.py
brian2modelfitting/tests/: test_inferencer.py  test_metric.py  test_modelfitting.py  test_modelfitting_spikefitter.py  test_modelfitting_tracefitter.py  test_optimizer.py  test_simulation.py  test_simulation_runtime.py  test_simulation_standalone.py  test_utils.py
docs_sphinx/: Makefile  brian2modelfitting.modelfitting.rst  conf.py  fitting.rst  index.rst
docs_sphinx/api/: brian2modelfitting.fitter.rst  brian2modelfitting.inferencer.rst  brian2modelfitting.metric.rst  brian2modelfitting.optimizer.rst  brian2modelfitting.rst  brian2modelfitting.simulation.rst  brian2modelfitting.simulator.rst  brian2modelfitting.tests.rst  brian2modelfitting.utils.rst  fitter.rst  index.rst  metric.rst  optimizer.rst  simulation.rst  utils.rst
docs_sphinx/examples/: base.rst  hh_multirun.rst  hh_sbi_flex.rst  hh_sbi_simple.rst  index.rst
docs_sphinx/features/: callback.rst  generate.rst  index.rst  onlinefitting.rst  parameters.rst  results.rst  standalone.rst
docs_sphinx/inferencer/: index.rst
docs_sphinx/introduction/: howitworks.rst  index.rst  installation.rst  introduction.rst  tutorial_hh.rst  tutorial_sbi.rst
docs_sphinx/metric/: advanced.rst  gammafactor.rst  index.rst  introduction.rst  mse.rst
docs_sphinx/optimizer/: advanced.rst  index.rst  introduction.rst
examples/: 0hh_nevergrad_multiruns.py  0hh_nevergrad_runtime.py  0hh_skopt_runtime.py  IF_brette_multi.py  IF_fit_spikes.py  IF_fit_spikes_double_inp.py  IF_fit_spikes_double_inp_OOP.py  IF_get_gamma.py  IF_sbi.py  IF_spikefitter.py  IF_spikefitter_doubleinp.py  basinhopping.py  generate_traces_synthetic.py  gradient_test.py  hh_fit_traces.py  hh_nevergrad_eFEL.py  hh_nevergrad_errorevolution.py  hh_nevergrad_multiruns.py  hh_nevergrad_onlinetracefit.py  hh_nevergrad_onlinetracefitter.py  hh_nevergrad_runtime.py  hh_nevergrad_runtime_OOP.py  hh_nevergrad_runtime_eFEL.py  hh_nevergrad_runtime_mulitruns.py  hh_nevergrad_runtime_onlineOOP.py  hh_nevergrad_standalone.py  hh_nevergrad_standalone_OOP.py  hh_nevergrad_standalone_multiruns.py  hh_sbi.py  hh_sbi_advanced.py  hh_sbi_flexible_interface.py  hh_sbi_simple_interface.py  hh_sbi_synthetic_traces.py  hh_sim_sbi.py  hh_skopt.py  hh_skopt_runtime.py  if_nevergrad_runtime.py  modelfitting_customOptimizer.py  modelfitting_nevergrad.py  modelfitting_skopt.py  (+6 more)
