[project]
name = "brian2modelfitting"
authors = [
    {name = 'Aleksandra Teska'},
    {name = 'Ante Kapetanovic'},
    {name = 'Marcel Stimberg'},
    {name ='Romain Brette'}
]
requires-python = '>=3.8'
dependencies = [
    'numpy>=1.21',
    'brian2>=2.2',
    'nevergrad>=0.4',
    'scikit-learn>=0.22',
    'tqdm',
    'pandas',
]
dynamic = ["readme", "version"]
description = 'Modelfitting Toolbox for the Brian 2 simulator'
keywords = ['computational neuroscience', 'model fitting', 'brian2']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Bio-Informatics'
]

[project.optional-dependencies]
test = ['pytest']
docs = ['sphinx>=1.8']
algos = [  # additional optimizers for nevergrad
         'cma>=3.0', 'fcmaes', 'loguru',  # loguru seems to be an undeclared dependency of fcmaes
         'nlopt',
         'poap',
         'ConfigSpace']
skopt = ['scikit-optimize']
efel = ['efel']
sbi = ['sbi>=0.23.0']
all = ['brian2modelfitting[test]',
       'brian2modelfitting[docs]',
       'brian2modelfitting[algos]',
       'brian2modelfitting[skopt]',
       'brian2modelfitting[efel]',
       'brian2modelfitting[sbi]'
]

[project.urls]
Documentation ='https://brian2modelfitting.readthedocs.io/'
Source = 'https://github.com/brian-team/brian2modelfitting'
Tracker = 'https://github.com/brian-team/brian2modelfitting/issues'

[tool.setuptools]
packages = ['brian2modelfitting']

[tool.setuptools.dynamic]
readme = {file = 'README.md', content-type = "text/markdown"}

[build-system]
requires = [
    "setuptools>=61",
    "setuptools-scm[toml]>=8.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = 'post-release'
local_scheme = 'no-local-version'
fallback_version = 'unknown'
version_file = "brian2modelfitting/_version.py"